--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-.container{
+/* .container{
     display: flex;
     height: 600px;
     width: 1000px;
     background-color: aqua;
     border: 2px solid black;
     /*flex-direction: coloumn-reverse;*/
-     flex-wrap: wrap;
+     /* flex-wrap: wrap;
      justify-content: center;
      align-items: center;
      gap: 10px;
@@ -25,3 +25,40 @@
     flex-grow:2;
     align-self:flex-end;
 }
+ */
+
+.container{
+    display: grid;
+    height: 500px;
+    width: 1000px;
+    background-color: aqua;
+    border: 1px solid black;
+    grid-template-columns: repeat(4,1fr) ;
+    grid-template-rows: repeat(3,1fr);
+     /* grid-template-areas: "header header header header" "main main . sidebar" 
+     "footer footer footer footer"; */
+     column-gap: 10px;
+     row-gap: 15px;
+     justify-items: center;
+
+ }
+ .item{
+    height: 100px;
+    width: 100px;
+    background-color: brown;
+    
+   
+ }
+ /* .item1{
+    grid-area: header;
+ }
+ .item2{
+    grid-area: main;
+ }
+ .item3{
+    grid-area: sidebar;
+
+ }
+ .item4{
+    grid-area: footer;
+ } */
